[project]
name = "py-ts-top"
version = "0.1.0"
description = "A Python-based monitoring tool for Teraslice distributed computing clusters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "textual>=0.47.0",
    "typer>=0.12.0",
]
authors = [
    { name = "Austin Godber", email = "godber@gmail.com" }
]
license = { text = "MIT" }

[project.scripts]
py-ts-top = "py_ts_top.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
